manifests/honeypot/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-honeypot
  labels:
    purpose: honeypot
